cmd/shared/libgogit.h

extern char* GitAuthNewBasicHTTP(char* username, char* password, long long* handleOut);
extern char* GitAuthNewTokenHTTP(char* token, long long* handleOut);
extern char* GitAuthNewSSHKeyFromFile(char* user, char* pemFile, char* password, long long* handleOut);
extern char* GitAuthNewSSHKey(char* user, char* pem, char* password, long long* handleOut);
extern char* GitAuthNewSSHAgent(char* user, long long* handleOut);
extern char* GitAuthNewSSHPassword(char* user, char* password, long long* handleOut);
extern void GitAuthFree(long long handle);
extern char* GitCommitIterNext(long long iterHandle, char** hashOut, char** msgOut, char** authorNameOut, char** authorEmailOut, long long* tsOut, int* eofOut);
extern void GitCommitIterFree(long long iterHandle);
extern char* GitReferenceIterNext(long long iterHandle, char** refNameOut, char** hashOut, int* eofOut);
extern void GitReferenceIterFree(long long iterHandle);
extern void GitCheckoutOptionsNew(long long* handleOut);
extern char* GitCheckoutOptionsSetHash(long long handle, char* val);
extern char* GitCheckoutOptionsSetBranch(long long handle, char* val);
extern char* GitCheckoutOptionsSetCreate(long long handle, int val);
extern char* GitCheckoutOptionsSetForce(long long handle, int val);
extern char* GitCheckoutOptionsSetKeep(long long handle, int val);
extern void GitAddOptionsNew(long long* handleOut);
extern char* GitAddOptionsSetAll(long long handle, int val);
extern char* GitAddOptionsSetPath(long long handle, char* val);
extern char* GitAddOptionsSetGlob(long long handle, char* val);
extern char* GitAddOptionsSetSkipStatus(long long handle, int val);
extern void GitAddOptionsFree(long long handle);
extern char* GitSignerNewPGP(char* armoredKey, char* passphrase, long long* handleOut);
extern void GitSignerFree(long long handle);
extern void GitSigningKeyFree(long long handle);